--- a/OfO/OfO/Base.lproj/Main.storyboard
+++ b/OfO/OfO/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Svr-Ia-Ogz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sS9-IH-VxM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -81,7 +81,29 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V2g-wv-k7q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="48.799999999999997" y="132.68365817091455"/>
+            <point key="canvasLocation" x="-127" y="-118"/>
+        </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="aIQ-ga-LZf">
+            <objects>
+                <viewController id="sS9-IH-VxM" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IxG-vP-tTy"/>
+                        <viewControllerLayoutGuide type="bottom" id="tf2-ZN-uDt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EMu-81-4N2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="mvj-pY-fX4" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="eQJ-Wb-OBv"/>
+                        <segue destination="Svr-Ia-Ogz" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="e4c-kw-eL3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="URa-QR-WyA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-982" y="789"/>
         </scene>
         <!--Menu Controller-->
         <scene sceneID="57m-iH-MIs">
@@ -236,8 +258,8 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="100.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="POR-AU-0gb">
-                                                    <rect key="frame" x="178" y="12.5" width="53" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="POR-AU-0gb">
+                                                    <rect key="frame" x="177.5" y="12" width="52.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -245,6 +267,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="POR-AU-0gb" firstAttribute="centerY" secondItem="qyr-Mk-5Kf" secondAttribute="centerY" id="7rA-OB-HYK"/>
+                                                <constraint firstItem="POR-AU-0gb" firstAttribute="leading" secondItem="FV7-Np-AoH" secondAttribute="trailing" constant="65" id="9gI-lW-lv8"/>
                                                 <constraint firstItem="FV7-Np-AoH" firstAttribute="centerY" secondItem="qyr-Mk-5Kf" secondAttribute="centerY" id="OVi-Ks-42a"/>
                                                 <constraint firstItem="FV7-Np-AoH" firstAttribute="leading" secondItem="qyr-Mk-5Kf" secondAttribute="leadingMargin" constant="30" id="hUI-Pf-8aN"/>
                                             </constraints>
@@ -379,12 +402,16 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="25X-Zq-EKI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="21.600000000000001" y="867.61619190404804"/>
+            <point key="canvasLocation" x="49" y="1150"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Fqj-qb-AVH">
             <objects>
                 <viewController id="mRW-Zb-VLD" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="D9n-Vk-uHZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="lK2-9D-Frl"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="uzZ-P6-OKI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -406,7 +433,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nW6-am-8hI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="210" y="1370"/>
+            <point key="canvasLocation" x="823" y="1366"/>
         </scene>
     </scenes>
     <resources>
